# llm-math-debate

./: .gitignore  .python-version  Cargo.toml  README.md  analyze-sft-test.ipynb  llama-70b-solution-classifier-test.jsonl  pyrightconfig.json  sft_test_job.slurm
amps/: README.txt
amps/mathematica/: compare_answers.py  error_insertion_failures.jsonl  error_insertion_prompt.py  format_dataset.py  formatted-examples.tex  gather_problem_stats.py  generate_wrong_solution.py  gpt-3.5-turbo-classification.jsonl  gpt-4-turbo-preview-classification.jsonl  insert_errors.py  problem_class_stats.csv  solution_dataset.jsonl  step_by_step_solution_examples.tex
amps/mathematica/algebra/: complete_square_w_steps.nb  complex_arithmetic.nb  complex_norm_and_arg.nb  conic_sections.nb  factor_polynomials.nb  function_range.nb  geometric_series.nb  parametric_equations.nb  polynomial_arithmetic.nb  polynomial_division_equation.nb  quadratic_roots_w_steps.nb  simplify_radicals.nb  simplify_radicals_w_steps.nb  solve_abs_value_equation.nb  sqrt_equations_w_steps.nb  system_of_equations_w_steps.nb
amps/mathematica/calculus/: arclength.nb  curl.nb  derivatives.nb  gradient.nb  (+5 more)
llm_math_debate/data_processing/: cot_classification.py  error_insertion_prompt.py  format_dataset.py  gather_problem_stats.py  generate_solution_dataset.py  load_dataset.py  pydantic_models.py  summarize_problem_class_stats.py
llm_math_debate/training/: sft.py  sft_test.py
simplify-mathematica-tex/: Cargo.toml  pyproject.toml
simplify-mathematica-tex/src/: lib.rs  main.rs  parse.rs  serialize.rs  simplify.rs
(+600 files in other folders)
