[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "simplify_mathematica_tex"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
